2001-04-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUser.m: Tidied some stuff to conform to coding standards.
	Added FIXME where unsure of code.  Tidied code to get name of user.
	* configure.in: Added checks for a few functions needed to get user.

2001-03-37  Jonathan Gapen  <jagapen@home.com>

	* Source/NSString.m: New private function to compute the scalar value
	of a high-low surrogate pair.  New surrogate range class variables.
	Optimize ([-hasPrefix]) and ([-hasSuffix]) by using NSAnchoredSearch.
	Add UTF-8 code to ([-dataUsingEncoding:allowLossyConversion:]).

2001-03-26  Jonathan Gapen  <jagapen@home.com>

	* Source/Makefile.preamble: No need to define HAVE_LIBXML here.
	* Source/NSBundle.m: ([+initialize]) and ([+pathForGNUstepResource:
	ofType:inDirectory:]) now use NSSearchPathForDirectoriesInDomains()
	to find directories, rather than use env vars directly.
	* Source/NSCharacterSet.m: Ditto for ([_-bitmapForSet:]).
	* Source/NSDictionary.m: Make NSLog() include the filename
	in ([-initWithContentsOfFile:]).
	* Source/NSUser.m: Re-implement NSStandardApplicationPaths() and
	NSStandardLibraryPaths() with NSSearchPathsForDirectoriesInDomains().
	In latter function, support $GNUSTEP_SYSTEM_ROOT/Developer/Demos.

2001-03-21  Jonathan Gapen  <jagapen@home.com>

	* config/nextcc.m4, config/objc-con-autoload.m4, config/procfs.m4,
	config/objc-sys-dynamic.m4, config/procfs-exe-link.m4: Autoconf
	macros used by configure.in.

2001-03-19  Jonathan Gapen  <jagapen@home.com>

	* Source/NSString.m: Implement ([-localizedStringWithFormat:]).
	Fix ([-localizedCompare:]) and ([-localizedCaseInsensitiveCompare:]).
	(They will work when ([-compare:options:range:locale:]) works.)
	Fix ([-initWithContentsOfFile:]) and ([-initWithContentsOfURL:]) so
	that they deal with 1 byte of data, and clarify Unicode BOM test with
	new class variables byteOrderMark and byteOrderMarkSwapped.
	In ([-initWithData:encoding:]) and ([-initWithCoder:]), don't treat